samples/_failures_safe/1761512153_b70bfa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c74af7b.c: In function ‘main’:
./samples/SAFE/__tmp_0c74af7b.c:161:16: error: missing terminating " character
  161 |         printf("No valid log
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_0c74af7b.c:161:9: error: expected expression at end of input
  161 |         printf("No valid log
      |         ^~~~~~
./samples/SAFE/__tmp_0c74af7b.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0c74af7b.c:161:9: error: expected declaration or statement at end of input
